Usability testing fixes and update. - Fix cross origin AJAX issues using JSONP - Add collapsable panels for sections

--- a/war/css/main.css
+++ b/war/css/main.css
@@ -4,6 +4,7 @@ body {
   padding-bottom: 20px;
 }
 
+/* Table sort psuedo-element pointers */
 th.sorted-up::after {
   content:"";
   border-left: 5px solid transparent;
@@ -20,4 +21,17 @@ th.sorted-down::after {
   border-top: 5px solid black;
   margin-left: 5px;
   display:inline-block;
+}
+
+button.close {
+    outline: none;
+}
+
+table.sortable th {
+  cursor: pointer;
+}
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 1s ease-out;
 }
